# fakeitmakeit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ruff.yml  tests.yml
fakeitmakeit/: __init__.py  factory.py  isvalid.py  util.py
fakeitmakeit/tests/: test_factory.py  test_isvalid.py  test_util.py
phantombunch/: __init__.py  cohort.py  factory.py  student.py  util.py
phantombunch/tests/: test_cohort.py  test_factory.py  test_student.py  test_util.py
src/fakeitmakeit/: __init__.py  factory.py  isvalid.py
tests/: test_factory.py  test_isvalid.py  test_util.py
