[tool.poetry]
package-mode = true
name = "fakeitmakeit"
version = "2024.4.0"
description = "Python package for generating fake student data."
license = "BSD-3-Clause"
authors = ["Marijan Beg <m.beg@imperial.ac.uk>"]
readme = "README.md"
repository = "https://github.com/marijanbeg/fakeitmakeit"
keywords = ["testing", "synthetic-data"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9"  # 3.9 is the minimum supported by pandas, supported until 10/2025
pandas = "^2.2.2"
Faker = "^24.8.0"
pycountry = "^23.12.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",    # flake8
    "E",    # pycodestyle
    "W",    # pycodestyle (warnings)
    "N",    # pep8-naming
    "E501", # line too long - not enabled by default
    "UP",   # pyupgrade
    "I",    # isort
    "D",    # pydocstyle
    "PD",   # pandas-vet
    "PL",   # pylint
    "NPY",  # numpy
    "RUF",  # ruff
]
ignore = [
    "D100",    # Missing docstring in public module
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"fakeitmakeit/tests/*" = ["D"]

[tool.coverage.run]
omit = ["fakeitmakeit/tests/*.py"]

[tool.pytest.ini_options]
addopts = "-v -n auto --doctest-modules --cov=fakeitmakeit --cov-report=html --cov-report=term"
