[project]
name = "fakeitmakeit"
version = "2024.10.1"  # YYYY.MM.PATCH
description = "Python package for generating fake student data."
license = "MIT"
authors = [
    {name = "Marijan Beg", email = "m.beg@imperial.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=30.8.0",
    "pandas>=2.2.3",
    "pycountry>=24.6.1",
]
include = [{ path = "tests", format = "sdist" } ]
repository = "https://github.com/marijanbeg/fakeitmakeit"
keywords = ["testing", "synthetic-data", "fake"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ipykernel>=6.29.5",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",    # flake8
    "E",    # pycodestyle
    "W",    # pycodestyle (warnings)
    "N",    # pep8-naming
    "E501", # line too long - not enabled by default
    "UP",   # pyupgrade
    "I",    # isort
    "D",    # pydocstyle
    "PD",   # pandas-vet
    "PL",   # pylint
    "NPY",  # numpy
    "RUF",  # ruff
]
ignore = [
    "D100",    # Missing docstring in public module
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"tests/*" = ["D"]

[tool.coverage.run]
omit = ["tests/*.py"]

[tool.pytest.ini_options]
addopts = "-v -n auto --doctest-modules --cov=fakeitmakeit --cov-report=html --cov-report=term"
